--- a/arch/arm64/configs/graphene_s2_defconfig
+++ b/arch/arm64/configs/graphene_s2_defconfig
@@ -307,6 +307,7 @@ CONFIG_PCI_SYSCALL=y
 #
 # Kernel Features
 #
+CONFIG_ADRENO_IDLER=y
 # CONFIG_ARM64_DCACHE_DISABLE is not set
 # CONFIG_ARM64_ICACHE_DISABLE is not set
 # CONFIG_ARM64_64K_PAGES is not set
