--- a/arch/arm64/configs/overdose_s2_defconfig
+++ b/arch/arm64/configs/overdose_s2_defconfig
@@ -40,7 +40,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-Graphene-v1.5"
+CONFIG_LOCALVERSION="-Overdose-R1"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -334,11 +334,11 @@ CONFIG_HOTPLUG_CPU=y
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
 CONFIG_SWP_EMULATE=y
-# CONFIG_HZ_100 is not set
+# CONFIG_HZ_300 is not set
 # CONFIG_HZ_250 is not set
-CONFIG_HZ_300=y
+CONFIG_HZ_100=y
 # CONFIG_HZ_1000 is not set
-CONFIG_HZ=300
+CONFIG_HZ=100
 CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
@@ -1292,7 +1292,7 @@ CONFIG_TUN=y
 # CONFIG_NET_DSA_MV88E6XXX_NEED_PPU is not set
 # CONFIG_NET_DSA_MV88E6131 is not set
 # CONFIG_NET_DSA_MV88E6123_61_65 is not set
-# CONFIG_ETHERNET is not set
+CONFIG_ETHERNET=y
 # CONFIG_FDDI is not set
 # CONFIG_HIPPI is not set
 # CONFIG_PHYLIB is not set
@@ -1315,7 +1315,7 @@ CONFIG_WLAN=y
 # CONFIG_ATMEL is not set
 # CONFIG_PRISM54 is not set
 # CONFIG_USB_ZD1201 is not set
-# CONFIG_USB_NET_RNDIS_WLAN is not set
+CONFIG_USB_NET_RNDIS_WLAN=y
 # CONFIG_WIFI_CONTROL_FUNC is not set
 # CONFIG_LIBRA_SDIOIF is not set
 # CONFIG_ATH6K_LEGACY_EXT is not set
