--- a/arch/arm64/configs/overdose_s2_defconfig
+++ b/arch/arm64/configs/overdose_s2_defconfig
@@ -40,7 +40,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-lineageos"
+CONFIG_LOCALVERSION="-Overdose"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -255,13 +255,14 @@ CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
-CONFIG_CGROUP_BFQIO=y
+CONFIG_CGROUP_BFQIO=y	
+CONFIG_IOSCHED_MAPLE=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_ROW is not set
-# CONFIG_DEFAULT_CFQ is not set
-CONFIG_DEFAULT_BFQ=y
-# CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="bfq"
+# CONFIG_DEFAULT_CFQ is not set	
+CONFIG_DEFAULT_MAPLE=y	
+# CONFIG_DEFAULT_NOOP is not set	
+CONFIG_DEFAULT_IOSCHED="maple"
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -305,6 +306,7 @@ CONFIG_ARM64_ERRATUM_845719=y
 # CONFIG_ARM64_SEV_IN_LOCK_UNLOCK is not set
 # CONFIG_ARM64_STLR_NEEDS_BARRIER is not set
 CONFIG_SMP=y
+CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
 # CONFIG_ARCH_WANTS_CTXSW_LOGGING is not set
