--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,8 @@ extra_certificates
 signing_key.priv
 signing_key.x509
 x509.genkey
+
+# Overdose Build Tools
+built/zImage
+built/kernel_output.txt
+built/*.zip
